fix: Railway deployment config - env vars for DB, JWT, CORS, API URL